--- a/archive.html
+++ b/archive.html
@@ -1,8 +1,8 @@
 ---
-title: Archive
+title: aArchive
 permalink: /archive/
 layout: page
-excerpt: All post.
+excerpt: all post.
 comments: false
 ---
 
